Rename category to action
