# api/src/model/mod.rs
@@ -2,7 +2,7 @@
  * Models for the application.
  */
 pub(crate) mod user;
-pub(crate) mod category;
+pub(crate) mod action;
 pub(crate) mod config;
 pub(crate) mod simple;
 pub(crate) mod reward;
@@ -11,7 +11,7 @@ pub(crate) mod role;
 pub(crate) mod point;
 
 pub(crate) use user::*;
-pub(crate) use category::*;
+pub(crate) use action::*;
 pub(crate) use config::*;
 pub(crate) use simple::*;
 pub(crate) use reward::*;
@@ -26,7 +26,7 @@ pub(crate) struct Filter{
   // #[serde(default, deserialize_with = "empty_string_as_none")]
   pub(crate) user_id: Option<i64>,
 
-  pub(crate) category_id: Option<i64>,
+  pub(crate) action_id: Option<i64>,
 }
 
 impl Filter {
@@ -35,28 +35,28 @@ impl Filter {
   pub(crate) fn by_user(user_id: i64) -> Self {
     Self {
         user_id: Some(user_id),
-        category_id: None,
+        action_id: None,
     }
   }
 
-  /// Create a filter for the specific category
-  pub(crate) fn by_category(category_id: i64) -> Self {
+  /// Create a filter for the specific action
+  pub(crate) fn by_action(action_id: i64) -> Self {
     Self {
         user_id: None,
-        category_id: Some(category_id),
+        action_id: Some(action_id),
     }
   }
 
-  /// Create a filter for the specific user and category
-  pub(crate) fn by_user_and_category(user_id: i64, category_id: i64) -> Self {
+  /// Create a filter for the specific user and action
+  pub(crate) fn by_user_and_action(user_id: i64, action_id: i64) -> Self {
     Self {
         user_id: Some(user_id),
-        category_id: Some(category_id),
+        action_id: Some(action_id),
     }
   }
 
   /// Are any of the filter values set?
   pub(crate) fn any(self) -> bool {
-    self.user_id.is_some() || self.category_id.is_some()
+    self.user_id.is_some() || self.action_id.is_some()
   }
 }
